...
import Cocoa
import OSLog
import SwiftUI
import UniformTypeIdentifiers

enum TCCProfileDisplayValue: String {
    case allow = "Allow"
    case deny = "Deny"
    case allowStandardUsersToApprove = "Let Standard Users Approve"
}

class TCCProfileViewController: NSViewController {

    @objc dynamic var model = Model.shared
...
            $0.destination == rule.destination
        }
        return foundRule == nil
    }

    private func setupAccessibilityIdentifiers() {
        executablesTable.setAccessibilityIdentifier("ExecutablesTable")
        appleEventsTable.setAccessibilityIdentifier("AppleEventsTable")
        saveButton.setAccessibilityIdentifier("SaveButton")
        uploadButton.setAccessibilityIdentifier("UploadButton")
        addExecutableButton.setAccessibilityIdentifier("AddExecutableButton")
        addAppleEventButton.setAccessibilityIdentifier("AddAppleEventButton")
        removeAppleEventButton.setAccessibilityIdentifier("RemoveAppleEventButton")
        removeExecutableButton.setAccessibilityIdentifier("RemoveExecutableButton")
        accessibilityPopUp.setAccessibilityIdentifier("AccessibilityPopUp")
        addressBookPopUp.setAccessibilityIdentifier("AddressBookPopUp")
        adminFilesPopUp.setAccessibilityIdentifier("AdminFilesPopUp")
        allFilesPopUp.setAccessibilityIdentifier("AllFilesPopUp")
        appBundlesPopUp.setAccessibilityIdentifier("AppBundlesPopUp")
        appDataPopUp.setAccessibilityIdentifier("AppDataPopUp")
...
