...
    }()

    var body: some View {
        VStack {
            Form {
                TextField("Jamf Pro Server *:", text: $serverURL)
                    .accessibilityIdentifier("UploadServerURLField")
                Picker("Authorization Type:", selection: $authType) {
                    Text("Basic/Bearer Auth").tag(AuthenticationType.basicAuth)
                    Text("Client Credentials (v10.49+):").tag(AuthenticationType.clientCredentials)
                }
                .accessibilityIdentifier("UploadAuthTypePicker")
                TextField(authType == .basicAuth ? "Username *:" : "Client ID *:", text: $username)
...
